# codebook

./: Cargo.toml  LICENSE  README.md  codebook.toml  test.md
examples/getting-started/: README.md
examples/hello-world/: README.md  codebook.toml  test.md
examples/hello-world/src/: main.rs
src/: config.rs  main.rs  snippet.rs
