[package]
name = "codebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
ignore = "0.4.22"
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.196", features = ["derive"] }
shlex = "1.3.0"
tempfile = "3.9.0"
toml = "0.8.9"
