[package]
name = "codebook"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nicholaslyang/codebook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
ignore = "0.4.22"
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.196", features = ["derive"] }
shlex = "1.3.0"
tempfile = "3.9.0"
toml = "0.8.9"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
